[metadata]
name = blockjuggler
version = attr: blockjuggler.__version__
author = Rick Lupton
author_email = mail@ricklupton.name
summary = Convert ICAL/ICS files into TaskJuggler `leaves` statements
long_description = file: README.rst
long_description_content_type = text/x-rst
home_page = https://github.com/ricklupton/blockjuggler
license = GPLv3
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    calendar
    ical
    taskjuggler

[options]
packages = blockjuggler
include_package_data = True
install_requires =
    click
    future
    icalendar
    recurring-ical-events>=2.0.1


[options.entry_points]
console_scripts =
    blockjuggler = blockjuggler:main
